added meta data

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 =========================================================
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
@@ -20,8 +21,19 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <!-- google icon -->
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Washito - Tu solución de lavado donde sea" />
+    <meta property="og:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
+    <meta property="og:image" content="https://www.washito.cl/img/washito-logo.jpeg" />
+    <meta property="og:url" content="https://www.washito.cl" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags (optional but recommended) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Washito - Tu solución de lavado donde sea" />
+    <meta name="twitter:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
+    <meta name="twitter:image" content="https://www.washito.cl/img/washito-logo.jpeg" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -35,7 +47,9 @@
     <script defer data-site="Washito.cl" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
   </head>
   <body>
+    <!-- add the logo in the background to have it hosted -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
