fixetd some meta sentax

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- seo added things -->
+    <meta name="description" content="
+    Lavado de autos: lava tu auto en cualquier lugar y sin tener que moverlo.
+    Solo pide un lavado y nosotros nos encargamos del resto."
+    />
+    <link rel='canonical' href='https://www.washito.cl/' />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Washito - Tu solución de lavado donde sea" />
     <meta property="og:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
