--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
+    <link rel="apple-touch-icon" href="/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Washito</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Nepcha Analytics (nepcha.com) -->
+    <script defer data-site="Washito.cl" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
     <!-- seo added things -->
     <meta name="description" content="
     Lavado de autos: lava tu auto en cualquier lugar y sin tener que moverlo.
@@ -47,10 +50,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-    <!-- Nepcha Analytics (nepcha.com) -->
-    <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-    <script defer data-site="Washito.cl" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
   </head>
   <body>
     <!-- add the logo in the background to have it hosted -->
