--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
+    <!-- make the image good quality! -->
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
     <link rel="apple-touch-icon" href="/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Washito</title>
