added new pages and some new fonts where they can be change in one class

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- txt_p_font and txt_s_font -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Spicy+Rice&family=Tiny5&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- add the logo in the background to have it hosted -->
