--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- txt_p_font and txt_s_font -->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Spicy+Rice&family=Tiny5&display=swap" rel="stylesheet">
+    <!-- txt_p_font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- txt_s_font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- add the logo in the background to have it hosted -->
