fixed image problem in html links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <head>
     <meta charset="UTF-8" />
     <!-- make the image good quality! -->
-    <link rel="icon" type="image/png" href="/img/favicon.png" />
-    <link rel="apple-touch-icon" href="/img/favicon.png">
+    <link rel="icon" type="image/png" href="./src/img/favicon.png" />
+    <link rel="apple-touch-icon" href="./src/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Washito</title>
     <!-- txt_p_font -->
@@ -38,7 +38,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Washito - Tu solución de lavado donde sea" />
     <meta property="og:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
-    <meta property="og:image" content="https://www.washito.cl/img/washito-logo.jpeg" />
+    <meta property="og:image" content="https://www.washito.cl/src/img/washito-logo.png" />
     <meta property="og:url" content="https://www.washito.cl" />
     <meta property="og:type" content="website" />
 
@@ -46,7 +46,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Washito - Tu solución de lavado donde sea" />
     <meta name="twitter:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
-    <meta name="twitter:image" content="https://www.washito.cl/img/washito-logo.jpeg" />
+    <meta name="twitter:image" content="https://www.washito.cl/src/img/washito-logo.png" />
 
     <link
       rel="stylesheet"
