--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Washito - Tu solución de lavado donde sea" />
     <meta property="og:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
+    <!--! links are not working on live website -->
     <meta property="og:image" content="https://www.washito.cl/src/img/washito-logo.png" />
     <meta property="og:url" content="https://www.washito.cl" />
     <meta property="og:type" content="website" />
@@ -46,6 +47,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Washito - Tu solución de lavado donde sea" />
     <meta name="twitter:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
+    <!--! links are not working on live website -->
     <meta name="twitter:image" content="https://www.washito.cl/src/img/washito-logo.png" />
 
     <link
