--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+     <!--! google SEO test -->
+    <meta name="google-site-verification" content="jdtW9v6DBCOe7Y9x2MIDKgPx3x3iR0BXgt1ywCoA-jM" />
     <!-- make the image good quality! -->
     <link rel="icon" type="image/png" href="./src/img/favicon.png" />
     <link rel="apple-touch-icon" href="./src/img/favicon.png">
