added new zoho file and removed other B on line

--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-     <!--! google SEO test -->
+     <!--? google SEO test -->
     <meta name="google-site-verification" content="jdtW9v6DBCOe7Y9x2MIDKgPx3x3iR0BXgt1ywCoA-jM" />
-    <!-- make the image good quality! -->
+    <!--! make the image good quality! -->
     <link rel="icon" type="image/png" href="./src/img/favicon.png" />
     <link rel="apple-touch-icon" href="./src/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Washito</title>
-    <!-- txt_p_font -->
+    <!--? txt_p_font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <!-- txt_s_font -->
+    <!--? txt_s_font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <!-- Nepcha Analytics (nepcha.com) -->
+    <!--? Nepcha Analytics (nepcha.com) -->
     <script defer data-site="Washito.cl" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
-    <!-- seo added things -->
+    <!--? seo added things -->
     <meta name="description" content="
     Lavado de autos: lava tu auto en cualquier lugar y sin tener que moverlo.
     Solo pide un lavado y nosotros nos encargamos del resto."
     />
     <link rel='canonical' href='https://www.washito.cl/' />
-    <!-- Open Graph Meta Tags -->
+    <!--? Open Graph Meta Tags -->
     <meta property="og:title" content="Washito - Tu solución de lavado donde sea" />
     <meta property="og:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
-    <!--! links are not working on live website -->
+    <!--? links are not working on live website -->
     <meta property="og:image" content="https://www.washito.cl/src/img/washito-logo.png" />
     <meta property="og:url" content="https://www.washito.cl" />
     <meta property="og:type" content="website" />
@@ -49,7 +49,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Washito - Tu solución de lavado donde sea" />
     <meta name="twitter:description" content="Washito ofrece los mejores servicios de lavado a domicilio adaptados a tus necesidades. ¡Experimenta la limpieza definitiva con nosotros, donde quiera que estés!" />
-    <!--! links are not working on live website -->
+    <!--? links are not working on live website -->
     <meta name="twitter:image" content="https://www.washito.cl/src/img/washito-logo.png" />
 
     <link
@@ -61,7 +61,6 @@
     />
   </head>
   <body>
-    <!-- add the logo in the background to have it hosted -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
