--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
         fbq('init', '8675222452529294');
         fbq('track', 'PageView');
         </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=8675222452529294&ev=PageView&noscript=1"
-        /></noscript>
     <!-- End Meta Pixel Code -->
   </head>
   <body>
+    <!-- Meta Pixel Code -->
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=8675222452529294&ev=PageView&noscript=1"
+      /></noscript>
+      <!-- End Meta Pixel Code -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
